# dsp-kit

./: AudioBus.hpp  CMakeLists.txt  Constants.hpp  Conversion.hpp  DcBlocker.hpp  Envelope.cpp  Envelope.hpp  FastFader.cpp  FastFader.hpp  FastMover.cpp  FastMover.hpp  LICENSE.txt  LadderLpf.hpp  Lut.hpp  Pinker.hpp  Smoother.hpp  Smoothing.hpp  Svf.cpp  Svf.hpp  Taper.cpp  Taper.h  Taper.hpp  abs.hpp  clamp.hpp  easing.hpp  envelope-test.cpp  fifo.hpp  readme.md  test-envelope.cpp
inc/: audio_taper_data.inc  easing_in_back.inc  easing_in_bounce.inc  easing_in_circular.inc  easing_in_cubic.inc  easing_in_elastic.inc  easing_in_exponential.inc  easing_in_out_back.inc  easing_in_out_bounce.inc  easing_in_out_circular.inc  easing_in_out_cubic.inc  easing_in_out_elastic.inc  easing_in_out_exponential.inc  easing_in_out_quadratic.inc  easing_in_out_quartic.inc  easing_in_out_quintic.inc  easing_in_out_sine.inc  easing_in_quadratic.inc  easing_in_quartic.inc  easing_in_quintic.inc  easing_in_sine.inc  easing_linear.inc  easing_out_back.inc  easing_out_bounce.inc  easing_out_circular.inc  easing_out_cubic.inc  easing_out_elastic.inc  easing_out_exponential.inc  easing_out_quadratic.inc  easing_out_quartic.inc  easing_out_quintic.inc  easing_out_sine.inc
noise/: CMakeLists.txt  lcg.c  lcg.h  pink.h  test-noise.c
test/: fastmover_shapes.html  plot_shape.m  plot_test_fastmover_shapes.m  test-audio-bus.cpp  test-dc-blocker.cpp  test-fast-fader.cpp  test-fast-mover.cpp  test-fifo.cpp  test-ladder-lpf.cpp  test-onepole-smoother.cpp  test-smoothing.cpp  test-svf.cpp  test-taper.cpp
tools/: gen_easing_tables.cpp
workbench/: gen_easing_tables.cpp  scratch.py  shapers.py  test-noise.py
workbench/easing-tables/: gen_easing_tables.cpp
